# isoscatR

./: .gitignore  DESCRIPTION  NAMESPACE  README  aclocal.m4  cleanup  configure  configure.ac  libtool
R/: .Rhistory  AAA.R  Rscat.R  Rscat_allele_util.R  Rscat_cov.R  Rscat_fileio.R  Rscat_plot.R  Rscat_util.R  isoscape.R  scatR.R  scatR_allele_util.R  scatR_cov.R  scatR_fileio.R  scatR_plot.R  scatR_util.R
data/: map.precip.dat.rda  map.precip.meta.rda
include/: Rscat_cov.h  Rscat_gpu.h  Rscat_init.h  Rscat_locate.h  Rscat_mcmc.h  Rscat_progressbar.h  Rscat_structs.h  Rscat_util.h  scatR_cov.h  scatR_gpu.h  scatR_init.h  scatR_locate.h  scatR_magma_wrap.h  scatR_mcmc.h  scatR_progressbar.h  scatR_structs.h  scatR_util.h
inst/genetic example/: 1-fit_model.R  2-generate_rasters.R
inst/genetic example/data/: WIWA_Wintering.txt  WIWA_Wintering_loc.txt  WIWA_all.txt  WIWA_all_old.txt  WIWA_isotope.csv  WIWA_loc.txt  birdboundary.txt
inst/isoscape example/: 0-settings.R  1-init_data.R  2-process_gnip.R  3-fit_model.R  4-predict_isoscape.R  5-iso_assign_pred.R  isotope_util.R
inst/isoscape example/Data/: GNIP_monthly.txt  GNIP_na.txt
man/: Rscat-package.Rd
src/: Makefile.in  Makevars  Makevars.in  Rscat.h  Rscat_R_exports.cpp  Rscat_calc.cpp  Rscat_cov.cpp  Rscat_cov_gpu.cu  Rscat_gpu.cpp  Rscat_init.cpp  Rscat_locate.cpp  Rscat_magma_chol.cpp  Rscat_magma_chol.h  Rscat_main.cpp  Rscat_mcmc.cpp  Rscat_output.cpp  Rscat_progressbar.h  Rscat_structs.h  Rscat_util.cpp  gzip.cpp  scatR_R_exports.cpp  scatR_cov.cpp  scatR_cov_gpu.cu  scatR_gpu.cpp  scatR_init.cpp  scatR_locate.cpp  scatR_magma_wrap.cpp  scatR_main.cpp  scatR_mcmc.cpp  scatR_util.cpp  zlib.cpp
